--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
     <title>drained</title>
 </head>
 <body>
-<h1> site da sarahh </h1>
+
+<header class="header">
+<h1 class="header-title"> meu site </h1>
+
+<nav class="header-menu">
+     <ul>
+        <li><a class="header-menu-item" href="#"> Item 1 </a></li>
+        <li><a class="header-menu-item" href="#"> Item 2 </a> </li>
+        <li><a class="header-menu-item" href="#"> Item 3 </a> </li>
+     </ul>
+</nav>
+</header>
 
 </body>
 </html>
