--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
 <body>
 
 <header class="header">
+<img class="img-header" src="peashooter.webp">
 <h1 class="header-title"> meu site </h1>
 
 <nav class="header-menu">
-     <ul>
+    <ul>
         <li><a class="header-menu-item" href="#"> Item 1 </a></li>
         <li><a class="header-menu-item" href="#"> Item 2 </a> </li>
         <li><a class="header-menu-item" href="#"> Item 3 </a> </li>
-     </ul>
+    </ul>
 </nav>
 </header>
 
 </body>
 </html>
+
