--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="reset.css">
     <title>drained</title>
 </head>
@@ -14,6 +15,20 @@
 <img class="img-header" src="peashooter.webp">
 <h1 class="header-title"> meu site </h1>
 
+<span id="burguer" class="material-symbols-outlined"
+onclick="clickMenu()">menu</span>
+<script>
+
+function clickMenu() {
+if (menu.style.display == 'block') {
+menu.style.display = 'none';
+} else {
+menu.style.display = 'block';
+}
+}
+</script>
+
+<nav id="menu" class="cabecalho-menu">
 <nav class="header-menu">
     <ul>
         <li><a class="header-menu-item" href="#"> Item 1 </a></li>
